# backtripix_v2

./: .env.local  .flake8  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
backend/: manage.py
backend/app/: apps.py  urls.py  utils.py
backend/app/admin/: __init__.py  category.py  country.py  project.py  region.py
backend/app/api/: urls.py
backend/app/api/v0/: urls.py
backend/app/api/v0/serializers/: project_serializer.py
backend/app/api/v0/tests/: test_project.py  utils.py
backend/app/api/v0/views/: project.py
backend/app/factories/: __init__.py  category.py  country.py  project.py  region.py
backend/app/migrations/: 0001_initial.py  0002_auto_20230926_1418.py
backend/app/models/: __init__.py  category.py  country.py  project.py  region.py
backend/auth/: backends.py  urls.py
backend/auth/admin/: __init__.py  user.py
backend/auth/api/: urls.py
backend/auth/api/v0/: urls.py
backend/auth/api/v0/serializers/: __init__.py  region.py  token.py  user_info.py
backend/auth/api/v0/tests/: test_token.py  test_user_info.py  utils.py
backend/auth/factories/: user.py
backend/auth/migrations/: 0001_initial.py
backend/auth/models/: user.py
backend/auth/social/: token.py
backend/auth/social/providers/: base.py  google.py  results.py
backend/auth/social/test/: test_token.py
backend/backtripix_v2/: asgi.py  settings.py  urls.py  wsgi.py
backend/common/: base_models.py  models.py  storage.py  utils.py
backend/common/rest_framework/: __init__.py  testing.py
backend/config/: development.py  production.py  settings.py  urls.py
scripts/postgres/: clean_db.sh
(+3 files in other folders)
