[tool.poetry]
name = "backtripix-v2"
version = "0.1.0"
description = ""
authors = ["Abdulmalik Maxudov <maxudov.ar@getflow.tech>"]
readme = "README.md"
packages = [{include = "backtripix_v2"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

