[tool.poetry]
name = "backtripix-v2"
version = "0.1.0"
description = ""
authors = ["Abdulmalik Maxudov <maxudov.ar@getflow.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
django-postgres-extra = "^2.0.8"
psycopg2-binary = "^2.9.7"

[tool.poetry.dev-dependencies]
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

