[tool.poetry]
name = "backtripix-v2"
version = "0.1.0"
description = ""
authors = ["Abdulmalik Maxudov <maxudov.ar@getflow.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
django-postgres-extra = "^2.0.8"
psycopg2-binary = "^2.9.7"

[tool.poetry.dev-dependencies]
pre-commit = "*"
autoflake = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length=88
multi_line_output=3
include_trailing_comma=true
old_finders=true
default_section="FIRSTPARTY"
combine_as_imports=true

